# django-starter-kit

./: .env  .gitignore  README.md  docker-compose.yaml  pyproject.toml
core/: settings.py
core/management/commands/: asgi_runserver.py
core/settings/: base.py  dev.py
