[project]
name = "django-starter-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-cotton>=2.1.3",
    "django-redis>=6.0.0",
    "django-split-settings>=1.3.2",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.36.0",
]
